--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-  background-color: var(--light-salmon);
+  background-color: var(--dark-salmon);
   height: 15vh;
 }
 
@@ -24,7 +24,7 @@ header {
 }
 
 #sidebar-col {
-  background-color: var(--alice-blue);
+  background-color: var(--light-salmon);
 }
 
 .current-weather {
@@ -32,7 +32,7 @@ header {
 }
 
 .future-weather {
-  background-color: var(--light-salmon);
+  background-color: var(--alice-blue);
 }
 
 .uv {
@@ -59,5 +59,18 @@ header {
 
 .extra-high-uv {
   background-color: purple;
+  color: white;
+}
+
+.current-weather-card {
+  background-color: var(--alice-blue);
+}
+
+.current-weather-info {
+  font-size: 1.5rem;
+}
+
+.future-card {
+  background-color: var(--dark-teal);
   color: white;
 }
