--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   background-color: var(--light-salmon);
 }
 
@@ -57,11 +57,6 @@ header {
 .history-list {
   cursor: pointer;
 }
-
-/* .start-div {
-  height: 85vh;
-  background-color: var(--alice-blue);
-} */
 
 .start-div {
   background-color: var(--dark-teal);
